o Added 'jaxp-api-1.4.2.jar' and 'jaxp-ri-1.4.2.jar' to the CLI distribution and updated the README file. o Updated methods     'setCharacterStream'     'setByteStream'     'setStringData'     'setSystemId'     'setPublicId'     'setBaseURI'     'setEncoding'     'setCertifiedText'    of the 'LSInput' implementation returned by method 'resolveResource' of the 'LSResourceResolver' implementation returned by method 'createResourceResolver' of class 'org.jomc.model.DefaultModelContext' to log a warning instead of throwing an 'UnsupportedOperationException'. o Updated method 'createSchema' of class 'org.jomc.model.DefaultModelContext' to make use of the context's 'LSResourceResolver' when creating a schema instance. In previous versions, schema resources were resolved remotely when imported or included in another schema.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc/trunk/jomc-cli@1331 aee2edba-5628-49ba-b8b8-0e9d4ac63d57